# swift-package-generator-based-on-openapi

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.beads/: deletions.jsonl  issues.jsonl  last-touched  sync-state.json
.claude/: settings.local.json
.claude/commands/: land_the_plane.md
.claude/skills/beads/: SKILL.md  quickstart.md
history/: initial_plan.md
scripts/: diagnose_multipart_array_refs.py
src/bootstrapper/: config.py  main.py
src/bootstrapper/core/: loader.py  writer.py
src/bootstrapper/generators/: security.py  swift.py  templates.py
src/bootstrapper/resources/: .env.example.j2  .gitignore.j2  .swift-format.j2  AGENTS.md.j2  AuthenticationMiddleware.swift.j2  ClientFile.swift.j2  Makefile.j2  Package.swift.j2  TestsFile.swift.j2  TypesFile.swift.j2  openapi-generator-config-client.yaml.j2  openapi-generator-config-types.yaml.j2  openapi-generator-config.yaml.j2  overlay.json.j2  overlay.yaml.j2
src/bootstrapper/transformers/: manager.py  op1_null_anyof.py  op2_const_enum.py  op3_float_to_number.py  op3_nullable.py  op4_format_fix.py  op6_clean_required.py  op7_header_schema_wrap.py  op7_overlay.py  ops_base.py  (+3 more)
tests/: test_config.py  test_integration.py  test_main.py  test_op1_null_anyof.py  test_op2_const_enum.py  test_op3_float_to_number.py  test_op3_nullable.py  test_op4_format_fix.py  test_op4_nullable.py  test_op5_clean_required.py  test_op5_format_fix.py  test_op6_clean_required.py  test_op6_overlay.py  test_op7_overlay.py  test_op99_overlay.py  test_security.py  test_swift.py  test_templates.py  test_transformers.py
(+4 files in other folders)
